# RCRacer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: train_pid_cmaes.yml  train_pid_cmeas.yml
src/controllers/controllers/: pid_controller.py
src/controllers/trainers/: cmaes.py
src/controllers/training_scripts/: training_cmeas_pid.py
src/controllers/utils/: genome_interface.py
src/examples/: demo_agent_view_random.py  demo_environment_with_forward_controller.py  demo_realtime_pid_controller.py  demo_realtime_runner_forward_collision.py  show_simple_track.py
src/rc_racer/: main_batch.py  main_realtime.py
src/rc_racer/agents/: base_controller.py  forward_controller.py  pid_controller.py
src/rc_racer/controllers/controllers/: pid_controller.py
src/rc_racer/controllers/training_scripts/: training_cmaes_pid.py
src/rc_racer/core/: state.py  track.py  track_factory.py  vehicle_factory.py  vehicle_model.py
src/rc_racer/environment/: collision.py  environment.py  reward.py  termination.py
src/rc_racer/gui/: agent_view.py  app.py  dashboard_view.py  debug_bar_view.py  track_view.py
src/rc_racer/simulation/: evaluator.py  runner_batch.py  runner_realtime.py
src/rc_racer/utils/: logger.py  registry.py
tests/core/: test_state.py  test_track.py  test_vehicle_model.py
