[project]
name = "rc_racer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Daley Adrichem" }
]

keywords = ["rc", "racer", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "pygame",
    "cmaes"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mypy",
]
api = [
    "fastapi",
    "uvicorn",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.uv]
package = true
